# advent-of-code

2019/day1/app/: Main.hs
2019/day1/src/: Lib.hs
2020/day1/: Cargo.toml
2020/day1/src/: main.rs
2020/day2/: Cargo.toml
2020/day2/src/: main.rs
2020/day3/: Cargo.toml
2020/day3/src/: main.rs
2022/1/: day_1.py  day_1_part_2.py  pyproject.toml  pytest.ini
2022/2/: day_2.py  day_2_part_2.py  pyproject.toml
2022/3/: day_3.py  day_3_part_2.py  pyproject.toml
2022/4/: day_4.py  day_4_part_2.py  day_4_part_two.py  pyproject.toml
2022/5/: day_5.py  day_5_part_2.py  pyproject.toml
2022/6/: day_6.py  day_6_part_2.py  pyproject.toml
2022/7/: day_7.py  minima.py  pyproject.toml  simple_input  test_directory_tree.py  test_history_entries.py
